fixed links menu not responsive

--- a/style.css
+++ b/style.css
@@ -1,10 +1,8 @@
-*{
-    box-sizing: border-box;
-}
 
 .nav-container{
     display:flex;
     justify-content: flex-start;
+    flex-direction:row;
     background-color:#272727
 }
 
@@ -15,8 +13,8 @@
     color: #fff;
     text-decoration: none;
     text-align: center;
-    margin-right: 2.5rem;
-    margin-left: 2.5rem;
+    margin-right: 1.5rem;
+    margin-left: 1.5rem;
     letter-spacing: 0.156rem;
 }
 .logo {
@@ -24,37 +22,33 @@
     cursor: pointer;
 }
 
-@media only screen and (max-width: 1200px){
-    /*Tablets [601px -> 1200px]*/
-    .item {
-        margin-right: -4.64px;
-        margin-left: -4.64px;
+@media (max-width: 575.98px) { 
+    .nav-container{
+        flex-direction: column;
     }
 
-    .logo {
-        margin: 0 0 0 0;
-    }
-}
-@media only screen and (max-width: 400px){
-	/*Big smartphones [426px -> 600px]*/
-    .item {
-        margin-right: -4.64px;
-        margin-left: -4.64px;
-    }
 
-    .logo {
-        margin: 0 0 0 0;
-    }
 
 }
-@media only screen and (max-width: 425px){
-	/*Small smartphones [325px -> 425px]*/
-    .item {
-        margin-right: -4.64px;
-        margin-left: -4.64px;
-    }
 
-    .logo {
-        margin: 0 0 0 0;
+/*Small devices (landscape phones, less than 768px)*/
+@media (max-width: 767.98px) { 
+    .nav-container{
+        flex-direction: column;
+    }
+}
+
+/* Medium devices (tablets, less than 992px)*/
+@media (max-width: 991.98px) { 
+    .nav-container{
+        flex-direction: column;
+    }
+}
+
+
+/* Large devices (desktops, less than 1200px)*/
+@media (max-width: 1199.98px) { 
+    .nav-container{
+        flex-direction: column;
     }
 }
